Created Repo class, which downloads the repo files

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,1 @@
-USERORORG=Denperidge-Redpencil
-REPOS=mu-project,mu-cl-resources
+REPOS=Denperidge-Redpencil/mu-project,Denperidge-Redpencil/mu-cl-resources
