--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-REPOS=Denperidge-Redpencil/mu-project,Denperidge-Redpencil/mu-cl-resources
+USERORORG=Denperidge-Redpencil
+REPOS=Denperidge-Redpencil/mu-project,Denperidge-Redpencil/mu-cl-resources@master,doctest
