Added LICENSE, updated README & .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 USERORORG=Denperidge-Redpencil
-REPOS=Denperidge-Redpencil/mu-project,Denperidge-Redpencil/mu-cl-resources@master,doctest
+REPOS=Denperidge-Redpencil/mu-project@master,Denperidge-Redpencil/mu-cl-resources,denperidge-redpencil/doctest@main,divio-docs-gen
