First succesful nav draft

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 USERORORG=Denperidge-Redpencil
 REPOS=Denperidge-Redpencil/mu-project@master,Denperidge-Redpencil/mu-cl-resources,denperidge-redpencil/doctest@main,divio-docs-gen
+NAV=True
