Reworked nav generation to support sibling files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 USERORORG=Denperidge-Redpencil
-REPOS=Denperidge-Redpencil/mu-project@master,Denperidge-Redpencil/mu-cl-resources,denperidge-redpencil/doctest@main,divio-docs-gen
+REPOS=Denperidge-Redpencil/mu-project@master,Denperidge-Redpencil/mu-cl-resources,divio-docs-gen,project,mu-migrations-service,mu-javascript-template,mu-ruby-template,ember-proxy-service
 NAV=True
