Updated README & conf example with copy/ignore

--- a/docs.conf.example
+++ b/docs.conf.example
@@ -17,6 +17,7 @@ Path=mu-migrations-service@master
 
 [project]
 Path=project
+Copy=documentation.md/references
 
 [mu-javascript-template]
 Path=mu-javascript-template
