Removed quotation marks in docs.conf.example

--- a/docs.conf.example
+++ b/docs.conf.example
@@ -1,7 +1,7 @@
 [DEFAULT]
 FallbackOwner=Denperidge-Redpencil
 GenerateNav=True
-DocsBasedir="docs/"
+DocsBasedir=docs/
 
 [divio-docs-gen]
 Path=divio-docs-gen
