--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "divio_docs_gen"
-version = "0.0.2"
+version = "0.0.3"
 authors = [
     { name="Denperidge", email="denperidge@gmail.com" },
 ]
@@ -21,8 +21,8 @@ classifiers = [
 "Homepage" = "https://github.com/Denperidge-Redpencil/divio-docs-gen"
 "Bug Tracker" = "https://github.com/Denperidge-Redpencil/divio-docs-gen/issues"
 
-[console_scripts]
-divio_docs_gen = "index:generate_docs"
+[project.scripts]
+divio_docs_gen = "divio_docs_gen:generate_docs"
 
 [build-system]
 requires = ["setuptools>=61.0"]
