--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,17 @@
 [project]
 name = "divio_docs_gen"
-version = "0.2.2"
+version = "0.2.3"
 authors = [
     { name="Denperidge", email="denperidge@gmail.com" },
 ]
 description = "Turn all the markdown files in your repos into one big, divio structrured documentation"
 readme = "README.md"
 requires-python = ">=3.6"
+dependencies = [
+    "GitPython",
+    "python-slugify; python_version<'3.6'",
+    "unicode-slugify; python_version>'3.7'"
+]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
