--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 GitPython==3.1.31
-python-slugify==8.0.1
+python-slugify==8.0.1; python_version > "3.6"
+unicode_slugify==0.1.5; python_version < "3.7"
