--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,18 @@ version = "0.0.1"
 authors = [
     { name="Denperidge", email="denperidge@gmail.com" },
 ]
-description = "Turn all the markdown files in your repos into one big, divio structrured documentation"
+description = "Collect and parse all your divio-style documentation with just one line of code!"
 readme = "README.md"
 requires-python = ">=3.6"
-dependencies = [
-    "GitPython",
-    "python-slugify",
-]
+dependencies = []
 classifiers = [
     "Development Status :: 4 - Beta",
-    "Environment :: Console",
-    "Intended Audience :: Information Technology",
+    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Topic :: Software Development :: Documentation",
+    "Topic :: Text Processing :: Markup :: Markdown"
 ]
 
 [project.urls]
